--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2016-04-19  Ted Thompson  <ted@federalproductions.com>
+
+	* KSP_Plugins.userprefs: 
+
 2016-04-07  Ted Thompson  <ted@federalproductions.com>
 
 	* KSP_Plugins.userprefs: 
