--- a/DPSoundFX/ChangeLog
+++ b/DPSoundFX/ChangeLog
@@ -1,3 +1,9 @@
+2016-04-19  Ted Thompson  <ted@federalproductions.com>
+
+	* dockingsound.cs:
+	* AssemblyInfo.cs:
+	* DPSoundFX.csproj: 
+
 2016-04-07  Ted Thompson  <ted@federalproductions.com>
 
 	* dockingsound.cs: 
