--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2016-04-19  Ted Thompson  <ted@federalproductions.com>
 
+	* dockingsound.cs: 
+
+2016-04-19  Ted Thompson  <ted@federalproductions.com>
+
 	* dockingsound.cs:
 	* AssemblyInfo.cs:
 	* DPSoundFX.csproj: 
