--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2016-04-28  Ted Thompson  <ted@federalproductions.com>
+
+	* dockingsound.cs:
+	* AssemblyInfo.cs: 
+
 2016-04-19  Ted Thompson  <ted@federalproductions.com>
 
 	* dockingsound.cs: 
